Fixed overflow scroll on drawer

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -9714,6 +9714,7 @@ body.cart-drawer-open {
   transition: transform 0.5s;
   visibility: visible;
   opacity: 1;
+  overflow-x: hidden;
 }
 .claim_drawer_container .claim-drawer-summary__close {
   position: absolute;
