--- a/styles/_claim-drawer.scss
+++ b/styles/_claim-drawer.scss
@@ -37,6 +37,7 @@
         transition: transform 0.5s;
         visibility: visible;
         opacity: 1;
+        overflow-x: hidden;
     }
     .claim-drawer-summary__close{
         position: absolute;
